# motionGPTv1.5

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
demo/: app.py
demo/assets/css/: custom.css
instructions/: 2024-04-29-21_59_2993209.json  2024-04-30-15_02_5193209.json  hip_abduction.json  test.json
src/mgpt/constants/: __init__.py
src/mgpt/constants/amass/: __init__.py  joint_maps.py  joints.py  labels.py
src/mgpt/constants/evaluation/: __init__.py
src/mgpt/constants/transforms/: __init__.py
src/mgpt/constants/word_vectorizer/: __init__.py
src/mgpt/data_loaders/: datasets_composition.py  get_data.py  model_motion_loaders.py  tensors.py
src/mgpt/data_loaders/amass/: amass_split_babel.py  babel.py  babel_flowmdm.py  process_amass.py
src/mgpt/data_loaders/humanml/: train_tex_mot_match.py
src/mgpt/diffusion/: fp16_util.py  gaussian_diffusion.py
src/mgpt/evaluation/: evaluate.py
src/mgpt/model/: FlowMDM.py  MDM.py  base_models.py  generate.py  rotation2xyz.py  smpl.py
src/mgpt/model/x_transformers/: x_transformers.py
src/mgpt/nlp/: __init__.py  llama3.py  llm.py
src/mgpt/nlp/precomputed/: action_vocab.txt
src/mgpt/render/: __init__.py
src/mgpt/utils/: metrics.py  model_util.py  parser_util.py  smpl_standarization.py  train_platforms.py  training_loop.py
tools/: README.md  evaluate.py  generate.py  motion_gpt.py  render.py  render_mesh.py  train.py  train.sh
tools/instructions/: 2024-04-29-18_45_0125795.json  composition_humanml.json
tools/jsons/: composition_babel.json
(+38 files in other folders)
